Fix profile page layout on mobile

--- a/frontend/app/profile/profile.component.scss
+++ b/frontend/app/profile/profile.component.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     width: max-content;
-    min-width: 400px;
+    min-width: min(400px, 90%);
     max-width: 90%;
     padding: 15px;
     margin: auto;
@@ -23,7 +23,7 @@
 
     .edit-button-container {
         position: absolute;
-        min-width: calc(400px - 30px);
+        min-width: calc(min(400px, 90%) - 30px);
         max-width: calc(90% - 30px);
 
         .edit-button {
@@ -63,6 +63,10 @@
                 padding: 5px 10px;
                 margin-top: 5px;
             }
+
+            @media (max-width: 768px) {
+                max-width: 150px;
+            }
         }
     }
 
@@ -73,7 +77,7 @@
         input {
             font-family: Averta, Verdana, Geneva, Tahoma, sans-serif;
             font-size: 24px;
-            min-width: 320px;
+            min-width: min(320px, 90%);
             max-width: 90%;
             padding: 0 5px !important;
             margin: 0 !important;
